ikiwiki (2.52) UNRELEASED; urgency=low

  * attachment: New plugin for uploading and managing attachments.
    (Sponsored by The TOVA Company.)
  * If attachments are not enabled, configure CGI.pm to disable file
    uploads by default. (An anti-DOS measure.)

 -- Joey Hess <joeyh@debian.org>  Mon, 30 Jun 2008 19:56:28 -0400

ikiwiki (2.51) unstable; urgency=low

  * Improve toplevel parentlink to link directly to index.html when usedirs is
    disabled.
  * map: Add a "show" parameter. "show=title" can be used to display page
    titles, rather than the default page name. Based on a patch from 
    Jaldhar H. Vyas, Closes: #484510
  * hnb: New plugin, contributed by Axel Beckert.
  * meta: Store "description" in pagestate for use by other plugins.
  * map: Support show=description.
  * textile: The Text::Textile perl module has some regexps that fail if
    input is flagged as utf-8, but contains invalid characters such as 0x92.
    To prevent it from crashing, re-encode the content before calling it,
    which will ensure that it's really utf-8.
  * Version the suggests of xapian-omega to a version known to be new enough
    to work with ikiwiki. Reportedly, version 0.9.9 is too old to work.
    Closes: #486592
  * creole: New plugin from Bernd Zeimetz. Closes: #486930
  * aggregate: Add template parameter.
  * Add support for the universal edit button <http://universaleditbutton.org/>
    (To get this on all pages of an exiting wiki, rebuild the wiki.)
  * txt: New plugin, contributed by Gabriel McManus.
  * smiley: Generate links relative to the destpage. (Fixes a reversion from
    2.41.)
  * toc: Revert change in 2.45 that made it run at sanitize time. That broke
    use of toc in a sidebar.
  * Call format hooks when generating page previews, thus fixing toc display
    there, as well as fixing inlins to again display in page previews, since
    it's started using format hooks. This also allows several other things,