@@ -28,3 +28,6 @@ each other, but can be located anywhere on the page. There can also be
 mutiple toggles that all toggle a single togglable.
 
 The id has a default value of "default", so can be omitted in simple cases.
+
+If you'd like a toggleable to be displayed by default, and toggle to
+hidden, then pass a parameter "open=true" when setting up the toggleable.
