@@ -2,3 +2,5 @@ It would be nice if one could set the initial state of the toggleable area.
 --[[[rdennis]]
 
 [[tag plugins/toggle]]
+
+[[done]]
