@@ -4,6 +4,8 @@ ikiwiki (2.52) UNRELEASED; urgency=low
     (Sponsored by The TOVA Company.)
   * If attachments are not enabled, configure CGI.pm to disable file
     uploads by default. (An anti-DOS measure.)
+  * toggle: Add support for toggles that are open by default.
+  * toggle: Fix to work in preview mode.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 30 Jun 2008 19:56:28 -0400
 
